--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Finca Las Palmeras</title>
+  <meta name="description" content="Disfruta de la comodidad, seguridad y hermosos paisajes de la finca Las Palmeras. Ideal para familias y grupos. Reserva ahora.">
+  <meta name="keywords" content="finca, alquiler, vacaciones, Colombia, Las Palmeras, grupos, eventos">
+  <title>Finca Las Palmeras - Vacaciones perfectas en Colombia</title>
 </head>
 
 <body>
