--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
   <meta name="description" content="Disfruta de la comodidad, seguridad y hermosos paisajes de la finca Las Palmeras. Ideal para familias y grupos. Reserva ahora.">
   <meta name="keywords" content="finca, alquiler, vacaciones, Colombia, Las Palmeras, grupos, eventos">
   <title>Finca Las Palmeras - Vacaciones perfectas en Colombia</title>
+
+  <!-- Open Graph Metadata -->
+  <meta property="og:title" content="Finca Las Palmeras - Vacaciones perfectas en Colombia" />
+  <meta property="og:description" content="Disfruta de la comodidad, seguridad y hermosos paisajes de la finca Las Palmeras. Ideal para familias y grupos. Reserva ahora." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.fincalaspalmeras.co/" />
+  <meta property="og:image" content="https://www.fincalaspalmeras.co/assets/images/finca-preview.jpg" />
+  <meta property="og:locale" content="es_CO" />
+  <meta property="og:site_name" content="Finca Las Palmeras" />
+  
+  <!-- Twitter Card Metadata -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Finca Las Palmeras - Vacaciones perfectas en Colombia" />
+  <meta name="twitter:description" content="Disfruta de la comodidad, seguridad y hermosos paisajes de la finca Las Palmeras. Ideal para familias y grupos. Reserva ahora." />
+  <meta name="twitter:image" content="https://www.fincalaspalmeras.co/assets/images/finca-preview.jpg" />
+  <meta name="twitter:site" content="@TuCuentaDeTwitter" />
 </head>
 
 <body>
